# lusol4py

./: README.md  meson.build  pyproject.toml
lusol4py/: __init__.py  lusol.py  meson.build
lusol4py/dummy/: dummy_module.c  meson.build
lusol4py/internal/: interface.f90  internal_module.c  meson.build
lusol4py/lusol/: lusol.h  lusol_module.c  meson.build
test/: test_dummy.py  test_lusol.py
